Fix alignment issue.

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background: #f5f5f6;
   margin: 0;
   padding: 0;
   font-family: 'Museo-Sans-500', Helvetica,arial,sans-serif;
